--- a/app/blog.html
+++ b/app/blog.html
@@ -1,13 +1,13 @@
 ---
 title: 部落格
-layout: ./app/indexlayout.ejs
+layout: ./app/layout.ejs
 engine: ejs
 current: blog.html
 ---
 <!-- 部落格導覽列 -->
-<div class="blog-nav ">
+<div class="blog-navbar ">
     <div class="wrap  d-flex jcc-space-b ">
-        <ul class="nav d-flex">
+        <ul class="blog-nav d-flex">
             <li><a href="#">最新消息</a></li>
             <li><a href="#">特別企劃</a></li>
             <li><a href="#">新品上市</a></li>
@@ -27,7 +27,8 @@ current: blog.html
             <img class="blog-img" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/blog-1.png?raw=true" alt="部落格圖片1">
             <div class="card-content">
                 <div class="card-text">
-                <h3 class="h3blog">情人特別企劃</h3>
+                    <a class="article-link" href="blog-content.html">
+                <h3 class="h3blog">情人特別企劃</h3></a>
                 <div class="card-title d-flex jcc-space-b">
                     <h4 class="h4blog">2020 Valentine’s Special</h4>
                     <p class="blog-date">2020/02/14</p>
@@ -36,12 +37,14 @@ current: blog.html
             </div>
                 <div class="morebox d-flex"><a href="blog-content.html">MORE</a></div>
             </div>
+
         </li>
         <li class="card-item d-flex ">
             <img class="blog-img" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/blog-2.png?raw=true" alt="部落格圖片2">
             <div class="card-content">
                 <div class="card-text">
-                <h3 class="h3blog">街頭潮人訪問</h3>
+                    <a class="article-link" href="blog-content.html">
+                <h3 class="h3blog">街頭潮人訪問</h3></a>
                 <div class="card-title d-flex jcc-space-b">
                     <h4 class="h4blog">Street Interview</h4>
                     <p class="blog-date">2020/02/02</p>
@@ -55,7 +58,8 @@ current: blog.html
             <img class="blog-img" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/blog-3.png?raw=true" alt="部落格圖片3">
             <div class="card-content">
                 <div class="card-text">
-                <h3 class="h3blog">春季新品上市</h3>
+                    <a class="article-link" href="blog-content.html">
+                <h3 class="h3blog">春季新品上市</h3></a>
                 <div class="card-title d-flex jcc-space-b">
                     <h4 class="h4blog">New Selection</h4>
                     <p class="blog-date">2020/02/02</p>
@@ -69,7 +73,8 @@ current: blog.html
             <img class="blog-img" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/blog-4.png?raw=true" alt="部落格圖片4">
             <div class="card-content">
                 <div class="card-text">
-                <h3 class="h3blog">設計師獨享鏡框優惠</h3>
+                    <a class="article-link" href="blog-content.html">
+                <h3 class="h3blog">設計師獨享鏡框優惠</h3></a>
                 <div class="card-title d-flex jcc-space-b">
                     <h4 class="h4blog">Sales for Designer</h4>
                     <p class="blog-date">2020/01/18</p>
@@ -83,7 +88,8 @@ current: blog.html
             <img class="blog-img" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/blog-5.png?raw=true" alt="部落格圖片5">
             <div class="card-content">
                 <div class="card-text">
-                <h3 class="h3blog">抵抗夏日大作戰</h3>
+                    <a class="article-link" href="blog-content.html">
+                <h3 class="h3blog">抵抗夏日大作戰</h3></a>
                 <div class="card-title d-flex  jcc-space-b">
                     <h4 class="h4blog">Summer Special</h4>
                     <p class="blog-date">2019/08/07</p>
