--- a/app/blog-content.html
+++ b/app/blog-content.html
@@ -1,13 +1,13 @@
 ---
 title: 情人節特別企劃
-layout: ./app/indexlayout.ejs
+layout: ./app/layout.ejs
 engine: ejs
 current: blog-content.html
 ---
 <!-- 部落格導覽列 -->
-<div class="blog-nav ">
+<div class="blog-navbar ">
     <div class="wrap  d-flex jcc-space-b ">
-        <ul class="nav d-flex">
+        <ul class="blog-nav d-flex">
             <li><a href="#">最新消息</a></li>
             <li><a href="#">特別企劃</a></li>
             <li><a href="#">新品上市</a></li>
@@ -22,7 +22,7 @@ current: blog-content.html
 <div class="wrap">
     <ul class="crumbs d-flex">
         <li class="crumbs-item"><a href="#">首頁</a></li>
-        <li class="crumbs-item"><a href="#">部落格</a></li>
+        <li class="crumbs-item"><a href="blog.html">部落格</a></li>
         <li class="crumbs-item"><a href="#">特別企劃</a></li>
         <li class="crumbs-item"><a href="#">情人節特別企劃</a></li>
     </ul>
