--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 ---
 title: 首頁
-layout: ./app/indexlayout.ejs
+layout: ./app/layout.ejs
 engine: ejs
 current: index
 ---
@@ -55,29 +55,29 @@ current: index
         </div>
     </div>
     <!-- 經典系列 -->
-    <div class="classic pd text-align-c">
+    <div class="classic pd ">
         <div class="wrap">
-            <h2 class="h2title mb-10">經典系列鏡框</h2>
+            <h2 class="h2title mb-10 text-align-c">經典系列鏡框</h2>
             <ul>
                 <li class="mb-8 d-flex align-i-c">
                     <img class="mr-8"
                         src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-1.png?raw=true"
                         alt="產品圖1">
                     <div class="classic-text d-flex align-i-c">
-                        <span class="material-icons-outlined">
+                        <h3 class="material-icons-outlined">
                             auto_awesome
-                        </span>
-                        <span class="glassstyle">OPTICAL</span>
+                        </h3>
+                        <h3 class="glassstyle">OPTICAL</h3>
                     </div>
                 </li>
-                <li class="mb-8 d-flex align-i-c classic-2">
+                <li class="mb-8 d-flex align-i-c ">
                     <img class=""
                         src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-2.png?raw=true"
                         alt="產品圖2">
                     <div class="classic-text d-flex align-i-c">
-                        <span class="material-icons-outlined">
-                            wb_sunny</span>
-                        <span class="glassstyle">SUNGLASSES</span>
+                        <h3 class="material-icons-outlined">
+                            wb_sunny</h3>
+                        <h3 class="glassstyle">SUNGLASSES</h3>
                     </div>
 
                 </li>
@@ -102,7 +102,7 @@ current: index
             <ul class="d-flex jcc-space-b">
                 <li><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-8.png?raw=true"
                         alt="聯名設計1">
-                    <span class="brandtext">Double A+</span>
+                    <h3 class="brandtext">Double A+</h3>
                 </li>
                 <li><img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/product-9.png?raw=true"
                         alt="聯名設計2">
@@ -121,7 +121,7 @@ current: index
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/rec-1.png?raw=true"
                             alt="顧客1">
                         <div class="text">
-                            <p class="mb-2">Jessy</p>
+                            <h3 class="mb-2">Jessy</h3>
                             <p>眼鏡品質優良，下次還會想來這邊購買！</p>
                         </div>
                     </div>
@@ -132,7 +132,7 @@ current: index
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/rec-2.png?raw=true"
                             alt="顧客2">
                         <div class="text">
-                            <p class="mb-2">凱倫</p>
+                            <h3 class="mb-2">凱倫</h3>
                             <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
                         </div>
                     </div>
@@ -143,7 +143,7 @@ current: index
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/rec-3.png?raw=true"
                             alt="顧客3">
                         <div class="text">
-                            <p class="mb-2">悠悠</p>
+                            <h3 class="mb-2">悠悠</h3>
                             <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
                         </div>
                     </div>
@@ -154,7 +154,7 @@ current: index
                         <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week3/rec-4.png?raw=true"
                             alt="顧客4">
                         <div class="text">
-                            <p class="mb-2">Kyuan</p>
+                            <h3 class="mb-2">Kyuan</h3>
                             <p>服務很好，品質沒有任何問題，非常喜歡。</p>
                         </div>
                     </div>
@@ -166,25 +166,27 @@ current: index
     </div>
 <!-- 聯絡我們 -->
     <div class="contactus pd">
-        <div class="wrap contact-wrap">
+        <div class="wrap ">
+            <div class="contact-wrap">
             <h2 class="h2title mb-10 text-align-c">聯絡我們</h2>
             <p class="mb-5">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
             <form class="form" action="">
-                <label>姓名</label>
-                <input class="inputbox" type="text" placeholder="陳小明">
-                <label>聯絡電話</label>
-                <input class="inputbox" type="phone" placeholder="0912-345-678">
-                <label>電子郵件</label>
-                <input class="inputbox" type="mail" placeholder="example@email.com">
-                <label>意見反應</label>
+                <label for="myname">姓名</label>
+                <input class="inputbox" id="myname" type="text" placeholder="陳小明">
+                <label for="phone">聯絡電話</label>
+                <input class="inputbox" id="phone" type="phone" placeholder="0912-345-678">
+                <label for="email">電子郵件</label>
+                <input class="inputbox" id="email" type="mail" placeholder="example@email.com">
+                <label for="feedback">意見反應</label>
                 <textarea class="d-block" name="" id="" cols="30" rows="10" placeholder="請輸入您的意見"></textarea>
                 <div class="checkbar d-flex ">
-                    <input class="check" type="checkbox" name="" id="">
-                    <p class="mb-10 privacy ">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</p>
+                    <input class="check" type="checkbox" name="" id="agree">
+                    <label for="agree" class="mb-10 privacy ">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                 </div>
                 <input class="btn-submit" type="submit" value="確認送出">
 
             </form>
+        </div>
         </div>
     </div>
 
